update base for l4-v2

--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -849,6 +849,42 @@ topologies:
     access: standard
     disable_links: [labguides, jenkins]
     labguides: self
+  training-level4-v2:
+    dev:
+      veos:
+        cpu: 60
+        ram: 90
+        cvp:
+          2021.3.0:
+            resources:
+              cpu: 60
+              ram: 90
+            branch: nested/2021.3
+            orderable: true
+            image: base-veos-training-l4-v2-2021-3-4291-20230210-114139
+            eos:
+              - 4.29.1F
+    prod:
+      veos:
+        cpu: 32
+        ram: 64
+        cvp:
+          2021.3.0:
+            resources:
+              cpu: 60
+              ram: 90
+            branch: 2021.3-3.14
+            orderable: false
+            image: base-veos-training-l4-v2-2021-3-4291-20230210-114139
+            eos:
+              - 4.29.1F
+    desc: 'Level 4 Training Lab. For use by the Arista Training Team.'
+    name: 'Training - Level 4'
+    title: 'Training Level 4 Lab'
+    disk_size: 300
+    access: standard
+    disable_links: [labguides, jenkins]
+    labguides: self
   training-level4-exam:
     dev:
       veos:
