--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -640,15 +640,15 @@ topologies:
               ram: 80
             branch: nested/2022.2
             orderable: true
-            image: base-veos-training-l3-2022-2-20230208-161329
+            image: base-veos-training-l3-2022-2-20230210-170733
             eos:
-              - 4.27.2F
+              - 4.29.1F
           2022.3.0:
             resources:
               cpu: 40
               ram: 80
             branch: nested/2022.3
-            orderable: true
+            orderable: false
             image: base-veos-training-l3-2022-3-20230206-101151
             eos:
               - 4.27.2F
