--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -646,12 +646,12 @@ topologies:
           2022.3.0:
             resources:
               cpu: 40
-              ram: 80
+              ram: 100
             branch: nested/2022.3
-            orderable: false
-            image: base-veos-training-l3-2022-3-20230206-101151
+            orderable: true
+            image: base-veos-training-l3-2022-3-4291-20230213-114928
             eos:
-              - 4.27.2F
+              - 4.29.1F
     prod:
       veos:
         cpu: 36
