--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -652,6 +652,15 @@ topologies:
             image: base-veos-training-l3-2022-3-4291-20230213-114928
             eos:
               - 4.29.1F
+          2021.3.1:
+            resources:
+              cpu: 40
+              ram: 110
+            branch: nested/2022.3
+            orderable: true
+            image: base-veos-training-l3-2022-3-1-4291-20230214-130205
+            eos:
+              - 4.29.1F
     prod:
       veos:
         cpu: 36
