--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -421,6 +421,51 @@ topologies:
     access: standard
     disable_links: [labguides, jenkins]
     labguides: self
+  training-level-1-3:
+    dev:
+      veos:
+        cpu: 40
+        ram: 110
+        cvp:
+          2022.3.1:
+            resources:
+              cpu: 40
+              ram: 110
+            branch: nested/2022.3
+            orderable: true
+            image: base-veos-training-l1-3-2022-3-4291-20230216-134419
+            eos:
+              - 4.29.1F
+    prod:
+      veos:
+        cpu: 32
+        ram: 64
+        cvp:
+          2020.2.3:
+            resources:
+              cpu: 32
+              ram: 64
+            branch: v2020.2-20220404a
+            orderable: false
+            image: base-training-l1-e4-26-0f-c2020-2-3-20211220
+            eos:
+              - 4.26.0F
+          2021.3.0:
+            resources:
+              cpu: 32
+              ram: 64
+            branch: 2021.3-3.14
+            orderable: false
+            image: base-veos-training-l1-2021-3-20230206-202647
+            eos:
+              - 4.27.2F
+    desc: 'New Training Level 1-3 Topo. TESTING ONLY'
+    name: 'Training - Level 1-3 TESTING ONLY'
+    title: 'Training Level 1-3 Lab. TESTING ONLY'
+    disk_size: 300
+    access: standard
+    disable_links: [labguides, jenkins]
+    labguides: self
   training-level1:
     dev:
       veos:
