--- a/topologies/training-level-1-3/files/apps/uilanding/modules.yaml
+++ b/topologies/training-level-1-3/files/apps/uilanding/modules.yaml
@@ -2,35 +2,38 @@ topology:
   image: "atd-topo.png"
   nodes:
     Spine1:
-      coords: "65,197,245,279"
+      coords: "43,231,220,314"
       ip: "192.168.0.11"
     Spine2:
-      coords: "360,196,543,280"
+      coords: "324,227,503,315"
       ip: "192.168.0.12"
     Spine3:
-      coords: "656,196,837,282"
+      coords: "596,231,777,316"
       ip: "192.168.0.13"
+    Spine4:
+      coords: "880,233,1056,315"
+      ip: "192.168.0.14"
     Leaf1:
-      coords: "24,491,208,575"
+      coords: "42,518,219,601"
       ip: "192.168.0.21"
     Leaf2:
-      coords: "248,491,432,576"
+      coords: "324,519,502,603"
       ip: "192.168.0.22"
     Leaf3:
-      coords: "471,489,655,575"
+      coords: "597,519,779,605"
       ip: "192.168.0.23"
     Leaf4:
-      coords: "696,491,878,575"
+      coords: "882,522,1055,603"
       ip: "192.168.0.24"
     BorderLeaf1:
-      coords: "204,20,386,107"
+      coords: "501,100,323,20"
       ip: "192.168.0.25"
     BorderLeaf2:
-      coords: "498,21,680,106"
+      coords: "599,20,778,101"
       ip: "192.168.0.26"
     Host1:
-      coords: "141,646,325,733"
+      coords: "184,669,362,756"
       ip: "192.168.0.51"
     Host2:
-      coords: "589,647,774,733"
+      coords: "753,673,928,751"
       ip: "192.168.0.52"
