add borderleaf1+2-DC1 start configs

--- a/topologies/training-level7/files/cvp/cvp_info.yaml
+++ b/topologies/training-level7/files/cvp/cvp_info.yaml
@@ -101,8 +101,10 @@ cvp_info:
     netelements:
       borderleaf1-DC1:
       - borderleaf1-DC1-BASE
+      - borderleaf1-DC1-START
       borderleaf2-DC1:
       - borderleaf2-DC1-BASE
+      - borderleaf2-DC1-START
       leaf1-DC1:
       - leaf1-DC1-BASE
       leaf2-DC1:
