--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -1020,7 +1020,7 @@ topologies:
     title: 'Training Level 5 Lab'
     disk_size: 500
     access: standard
-    disable_links: [labguides, jenkins]
+    disable_links: [labguides, jenkins,lab_status]
     labguides: self
   training-level7:
     dev:
@@ -1076,7 +1076,7 @@ topologies:
     title: 'Training Level 7 Lab'
     disk_size: 500
     access: standard
-    disable_links: [labguides, jenkins]
+    disable_links: [labguides, jenkins,lab_status]
     labguides: self
   training-level7-part3:
     dev:
@@ -1132,5 +1132,5 @@ topologies:
     title: 'Training Level 7 - Part 3 Lab'
     disk_size: 500
     access: standard
-    disable_links: [labguides, jenkins]
+    disable_links: [labguides, jenkins,lab_status]
     labguides: self
