--- a/nested-labvm/atd-docker/docker-compose.yml
+++ b/nested-labvm/atd-docker/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       - /home/arista/arista-dir:/home/arista:rw
   login:
     container_name: atd-login
-    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_login:1.0.5
+    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_login:1.0.10
     user: $ArID:$ArGD
     restart: always
     hostname: devbox
@@ -85,7 +85,7 @@ services:
       - /opt/ceos:/opt/ceos:rw
   uilanding:
     container_name: atd-uilanding
-    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_uilanding:1.0.0
+    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_uilanding:1.0.7
     restart: always
     environment:
       - PYTHONUNBUFFERED=1
@@ -94,6 +94,7 @@ services:
       - /etc/atd:/etc/atd:ro
       - /opt/atd:/opt/atd:ro
       - /home/arista/arista-dir/apps/uilanding:/opt/modules:ro
+      - /home/arista/arista-dir/menus:/opt/menus:rw
       - /var/run/docker.sock:/var/run/docker.sock:ro
     networks:
       - atd_nginx
@@ -119,7 +120,7 @@ services:
       - "1813:1813/udp"
   nginx:
     container_name: atd-nginx
-    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_nginx:1.0.2
+    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_nginx:1.0.3
     restart: always
     depends_on:
       - uilanding
