testing lab-3 dev with branch 2021.3-3.15

--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -692,7 +692,7 @@ topologies:
             resources:
               cpu: 40
               ram: 110
-            branch: nested/2022.3
+            branch: 2021.3-3.14
             orderable: true
             image: base-veos-training-l3-2022-3-1-4291-20230214-130205
             eos:
