--- a/nested-labvm/atd-docker/docker-compose.yml
+++ b/nested-labvm/atd-docker/docker-compose.yml
@@ -85,7 +85,7 @@ services:
       - /opt/ceos:/opt/ceos:rw
   uilanding:
     container_name: atd-uilanding
-    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_uilanding:1.0.7
+    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_uilanding:livechat.2
     restart: always
     environment:
       - PYTHONUNBUFFERED=1
