--- a/nested-labvm/atd-docker/docker-compose.yml
+++ b/nested-labvm/atd-docker/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       - /home/arista/arista-dir:/home/arista:rw
   login:
     container_name: atd-login
-    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_login:selfgrading
+    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_login:1.0.12
     user: $ArID:$ArGD
     restart: always
     hostname: devbox
@@ -86,7 +86,7 @@ services:
       - /opt/ceos:/opt/ceos:rw
   uilanding:
     container_name: atd-uilanding
-    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_uilanding:selfgrading
+    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_uilanding:1.0.8
     restart: always
     environment:
       - PYTHONUNBUFFERED=1
@@ -198,7 +198,7 @@ services:
       - atd_nginx
   grader:
     container_name: atd-grader
-    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_selfgrading:latest
+    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_selfgrading:1.0.0
     command: ["false"]
     volumes:
       - /etc/opt:/etc/opt:rw
