--- a/nested-labvm/atd-docker/docker-compose.yml
+++ b/nested-labvm/atd-docker/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       - /home/arista/arista-dir:/home/arista:rw
   login:
     container_name: atd-login
-    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_login:1.0.11
+    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_login:1.0.12
     user: $ArID:$ArGD
     restart: always
     hostname: devbox
@@ -34,6 +34,7 @@ services:
       - PYTHONUNBUFFERED=1
     volumes:
       - /etc/atd:/etc/atd:rw
+      - /etc/opt:/etc/opt:rw
       - /opt/atd/topologies:/opt/atd/topologies:ro
       - /home/arista/arista-dir:/home/arista:rw
       - /home/arista/.ssh:/home/arista/.ssh:rw
@@ -85,11 +86,12 @@ services:
       - /opt/ceos:/opt/ceos:rw
   uilanding:
     container_name: atd-uilanding
-    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_uilanding:1.0.7
+    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_uilanding:1.0.8
     restart: always
     environment:
       - PYTHONUNBUFFERED=1
     volumes:
+      - /etc/opt:/etc/opt:ro
       - /etc/atd:/etc/atd:ro
       - /opt/atd:/opt/atd:ro
       - /home/arista/arista-dir/apps/uilanding:/opt/modules:ro
@@ -192,6 +194,14 @@ services:
     restart: always
     volumes:
       - "/home/arista/arista-dir/apps/webui:/config:rw"
+    networks:
+      - atd_nginx
+  grader:
+    container_name: atd-grader
+    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_selfgrading:1.0.0
+    command: ["false"]
+    volumes:
+      - /etc/opt:/etc/opt:rw
     networks:
       - atd_nginx
 networks:
