--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -1102,7 +1102,7 @@ topologies:
             resources:
               cpu: 60
               ram: 80
-            branch: 2021.3-3.16
+            branch: 2021.3-3.16-L7
             orderable: true
             image: base-ceos-training-l7-2021-3-20230331-110651
             eos:
