--- a/nested-labvm/atd-docker/docker-compose.yml
+++ b/nested-labvm/atd-docker/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       - /home/arista/arista-dir:/home/arista:rw
   login:
     container_name: atd-login
-    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_login:1.0.12
+    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_login:db-grading
     user: $ArID:$ArGD
     restart: always
     hostname: devbox
@@ -198,7 +198,7 @@ services:
       - atd_nginx
   grader:
     container_name: atd-grader
-    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_selfgrading:1.0.0
+    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_selfgrading:db-root
     command: ["false"]
     volumes:
       - /etc/opt:/etc/opt:rw
