--- a/topologies/training-level-1-3/topo_build.yml
+++ b/topologies/training-level-1-3/topo_build.yml
@@ -143,6 +143,12 @@ nodes:
         - neighborDevice: host1
           neighborPort: Ethernet3
           port: Ethernet8
+        - neighborDevice: host2
+          neighborPort: Ethernet1
+          port: Ethernet9
+        - neighborDevice: host2
+          neighborPort: Ethernet3
+          port: Ethernet10
         # - neighborDevice: server1
         #   neighborPort: Ethernet1
         #   port: Ethernet11
@@ -300,13 +306,13 @@ nodes:
       sys_mac: 00:1c:73:f1:c6:01
       neighbors:
         - neighborDevice: leaf1
-          neighborPort: Ethernet7
+          neighborPort: Ethernet9
           port: Ethernet1
         - neighborDevice: leaf2
           neighborPort: Ethernet7
           port: Ethernet2
         - neighborDevice: leaf1
-          neighborPort: Ethernet8
+          neighborPort: Ethernet10
           port: Ethernet3
         - neighborDevice: leaf2
           neighborPort: Ethernet8
@@ -315,14 +321,46 @@ nodes:
       ip_addr: 192.168.0.52
       sys_mac: 00:1c:73:f2:c6:01
       neighbors:
-        - neighborDevice: leaf3
+        - neighborDevice: leaf1
+          neighborPort: Ethernet9
+          port: Ethernet1
+        - neighborDevice: leaf2
           neighborPort: Ethernet7
+          port: Ethernet2
+        - neighborDevice: leaf1
+          neighborPort: Ethernet10
+          port: Ethernet3
+        - neighborDevice: leaf2
+          neighborPort: Ethernet8
+          port: Ethernet4
+  - host3:
+      ip_addr: 192.168.0.53
+      sys_mac: 00:1c:73:f2:c6:01
+      neighbors:
+        - neighborDevice: leaf3
+          neighborPort: Ethernet9
           port: Ethernet1
         - neighborDevice: leaf4
           neighborPort: Ethernet7
           port: Ethernet2
         - neighborDevice: leaf3
+          neighborPort: Ethernet10
+          port: Ethernet3
+        - neighborDevice: leaf4
           neighborPort: Ethernet8
+          port: Ethernet4
+  - host4:
+      ip_addr: 192.168.0.54
+      sys_mac: 00:1c:73:f2:c6:01
+      neighbors:
+        - neighborDevice: leaf3
+          neighborPort: Ethernet9
+          port: Ethernet1
+        - neighborDevice: leaf4
+          neighborPort: Ethernet7
+          port: Ethernet2
+        - neighborDevice: leaf3
+          neighborPort: Ethernet10
           port: Ethernet3
         - neighborDevice: leaf4
           neighborPort: Ethernet8
