--- a/topologies/training-level-1-3/topo_build.yml
+++ b/topologies/training-level-1-3/topo_build.yml
@@ -149,12 +149,6 @@ nodes:
         - neighborDevice: host2
           neighborPort: Ethernet3
           port: Ethernet10
-        # - neighborDevice: server1
-        #   neighborPort: Ethernet1
-        #   port: Ethernet11
-        # - neighborDevice: server2
-        #   neighborPort: Ethernet2
-        #   port: Ethernet12
   - leaf2:
       ip_addr: 192.168.0.22
       sys_mac: 00:1c:73:c2:c6:01
@@ -189,12 +183,6 @@ nodes:
         - neighborDevice: host2
           neighborPort: Ethernet3
           port: Ethernet10
-        # - neighborDevice: server1
-        #   neighborPort: Ethernet2
-        #   port: Ethernet11
-        # - neighborDevice: server2
-        #   neighborPort: Ethernet1
-        #   port: Ethernet12
   - leaf3:
       ip_addr: 192.168.0.23
       sys_mac: 00:1c:73:c3:c6:01
@@ -229,12 +217,6 @@ nodes:
         - neighborDevice: host4
           neighborPort: Ethernet3
           port: Ethernet10
-        # - neighborDevice: server3
-        #   neighborPort: Ethernet1
-        #   port: Ethernet11
-        # - neighborDevice: server3
-        #   neighborPort: Ethernet2
-        #   port: Ethernet12
   - leaf4:
       ip_addr: 192.168.0.24
       sys_mac: 00:1c:73:c4:c6:01
@@ -269,12 +251,6 @@ nodes:
         - neighborDevice: host4
           neighborPort: Ethernet3
           port: Ethernet10
-        # - neighborDevice: server4
-        #   neighborPort: Ethernet1
-        #   port: Ethernet11
-        # - neighborDevice: server4
-        #   neighborPort: Ethernet2
-        #   port: Ethernet12
   - borderleaf1:
       ip_addr: 192.168.0.25
       sys_mac: 00:1c:73:c5:c6:01
@@ -324,13 +300,13 @@ nodes:
       sys_mac: 00:1c:73:f1:c6:01
       neighbors:
         - neighborDevice: leaf1
-          neighborPort: Ethernet9
+          neighborPort: Ethernet7
           port: Ethernet1
         - neighborDevice: leaf2
-          neighborPort: Ethernet7
+          neighborPort: Ethernet
           port: Ethernet2
         - neighborDevice: leaf1
-          neighborPort: Ethernet10
+          neighborPort: Ethernet8
           port: Ethernet3
         - neighborDevice: leaf2
           neighborPort: Ethernet8
@@ -356,31 +332,31 @@ nodes:
       sys_mac: 00:1c:73:f3:c6:01
       neighbors:
         - neighborDevice: leaf3
-          neighborPort: Ethernet9
+          neighborPort: Ethernet7
           port: Ethernet1
         - neighborDevice: leaf4
-          neighborPort: Ethernet7
+          neighborPort: Ethernet9
           port: Ethernet2
         - neighborDevice: leaf3
-          neighborPort: Ethernet10
+          neighborPort: Ethernet8
           port: Ethernet3
         - neighborDevice: leaf4
-          neighborPort: Ethernet8
+          neighborPort: Ethernet10
           port: Ethernet4
   - host4:
       ip_addr: 192.168.0.54
       sys_mac: 00:1c:73:f4:c6:01
       neighbors:
-        - neighborDevice: leaf3
+        - neighborDevice: leaf4
           neighborPort: Ethernet9
           port: Ethernet1
-        - neighborDevice: leaf4
+        - neighborDevice: leaf3
           neighborPort: Ethernet7
           port: Ethernet2
-        - neighborDevice: leaf3
+        - neighborDevice: leaf4
           neighborPort: Ethernet10
           port: Ethernet3
-        - neighborDevice: leaf4
+        - neighborDevice: leaf3
           neighborPort: Ethernet8
           port: Ethernet4
 servers:
