--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -590,7 +590,7 @@ topologies:
               cpu: 32
               ram: 64
             branch: 2021.3-3.14
-            orderable: false
+            orderable: true
             image: base-veos-training-l1-exam-2-2021-3-20230424-180821
             eos:
               - 4.27.2F
@@ -707,7 +707,7 @@ topologies:
               cpu: 32
               ram: 64
             branch: 2021.3-3.16
-            orderable: false
+            orderable: true
             image: base-veos-training-l2-exam-2-2021-3-20230322-094649-image
             eos:
               - 4.27.2F
