--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -589,7 +589,7 @@ topologies:
             resources:
               cpu: 32
               ram: 64
-            branch: 2021.3-3.16
+            branch: 2021.3-3.16-exam-fixes
             orderable: true
             image: base-veos-training-l1-exam-2-2021-3-20230424-180821
             eos:
@@ -706,7 +706,7 @@ topologies:
             resources:
               cpu: 32
               ram: 64
-            branch: 2021.3-3.16
+            branch: 2021.3-3.16-exam-fixes
             orderable: true
             image: base-veos-training-l2-exam-2-2021-3-20230322-094649-image
             eos:
