--- a/nested-labvm/services/atdShutdown/grading.service
+++ b/nested-labvm/services/atdShutdown/grading.service
@@ -8,4 +8,4 @@ RemainAfterExit=yes
 ExecStop=/usr/bin/python3 /opt/atd/nested-labvm/services/atdShutdown/gradingToDB.py
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=shutdown.target
