--- a/nested-labvm/services/atdShutdown/grading.service
+++ b/nested-labvm/services/atdShutdown/grading.service
@@ -2,10 +2,12 @@
 Description=Script to get grading data to firestore
 Before=shutdown.target
 Requires=docker.service
+
 [Service]
 Type=oneshot
 RemainAfterExit=yes
-ExecStop=/usr/bin/python3 /opt/atd/nested-labvm/services/atdShutdown/gradingToDB.py
+ExecStart=/usr/bin/python3 /opt/atd/nested-labvm/services/atdShutdown/gradingToDB.py
 
 [Install]
-WantedBy=shutdown.target
+#WantedBy=shutdown.target
+WantedBy=multi-user.target
