--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -1147,7 +1147,7 @@ topologies:
             resources:
               cpu: 60
               ram: 80
-            branch: 2021.3-3.16-L7-2
+            branch: 2021.3-3.16-exam-fixes-v3
             orderable: true
             image: base-ceos-training-l7-2021-3-20230331-110651
             eos:
@@ -1203,7 +1203,7 @@ topologies:
             resources:
               cpu: 60
               ram: 80
-            branch: 2021.3-3.16
+            branch: 2021.3-3.16-exam-fixes-v3
             orderable: true
             image: base-ceos-training-l7-part-3-2021-3-20230331-110651
             eos:
