--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -445,7 +445,7 @@ topologies:
             resources:
               cpu: 32
               ram: 64
-            branch: 2022.3-3.1
+            branch: 2021.3-3.17-l1-3
             orderable: true
             image: base-veos-training-l1-3-2022-3-4291-20230424-175728
             eos:
