--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -706,9 +706,9 @@ topologies:
             resources:
               cpu: 32
               ram: 64
-            branch: 2021.3-3.17
+            branch: 2021.3-3.17-exam-fixes
             orderable: true
-            image: base-veos-training-l2-exam-2-2021-3-20230322-094649-image
+            image: base-veos-training-l2-exam-2-2021-3-20230621-093455
             eos:
               - 4.27.2F
     desc: 'Level 2 Exam Topoplogy 2. For use by the Arista Training Team.'
